--- a/.env.railway
+++ b/.env.railway
@@ -7,12 +7,8 @@ LOG_CHANNEL=stderr
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=warning
 
-DB_CONNECTION=pgsql
-DB_HOST=${PGHOST}
-DB_PORT=${PGPORT}
-DB_DATABASE=${PGDATABASE}
-DB_USERNAME=${PGUSER}
-DB_PASSWORD=${PGPASSWORD}
+DB_CONNECTION=sqlite
+DB_DATABASE=/var/www/html/database/database.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
