--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -7,7 +7,6 @@ WORKDIR /var/www/html
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
-    libpq-dev \
     libjpeg62-turbo-dev \
     libfreetype6-dev \
     locales \
@@ -19,6 +18,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     libzip-dev \
     libonig-dev \
+    sqlite3 \
+    libsqlite3-dev \
     nginx \
     nodejs \
     npm
@@ -27,7 +28,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install extensions
-RUN docker-php-ext-install pdo_pgsql pgsql mbstring zip exif pcntl
+RUN docker-php-ext-install pdo_sqlite mbstring zip exif pcntl
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install gd
 
@@ -36,6 +37,11 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Copy existing application directory
 COPY . .
+
+# Create SQLite database file if it doesn't exist
+RUN mkdir -p database
+RUN touch database/database.sqlite
+RUN chmod -R 777 database
 
 # Install application dependencies
 RUN composer install --no-interaction --optimize-autoloader --no-dev
