--- a/.env.heroku
+++ b/.env.heroku
@@ -1,14 +1,14 @@
 APP_NAME=FarmSmart
 APP_ENV=production
 APP_DEBUG=false
-APP_URL=${RAILWAY_PUBLIC_DOMAIN}
+APP_URL=${HEROKU_APP_NAME}.herokuapp.com
 
 LOG_CHANNEL=stderr
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=warning
 
 DB_CONNECTION=sqlite
-DB_DATABASE=/var/www/html/database/database.sqlite
+DB_DATABASE=/app/database/database.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,3 +27,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+SANCTUM_STATEFUL_DOMAINS=${HEROKU_APP_NAME}.herokuapp.com,farm-smart.netlify.app
+SESSION_DOMAIN=${HEROKU_APP_NAME}.herokuapp.com
+CORS_ALLOWED_ORIGINS=https://farm-smart.netlify.app
